# clean_architecture_em_python

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
init/: schema.sql
src/data/tests/: user_finder.py
src/data/use_cases/: user_finder.py  user_finder_test.py  user_register.py  user_register_test.py
src/domain/models/: users.py
src/domain/use_cases/: user_finder.py  user_register.py
src/infra/db/entities/: users.py
src/infra/db/repositories/: users_repository.py  users_repository_test.py
src/infra/db/settings/: connetion.py  connetion_test.py
src/infra/db/tests/: users_repository.py
src/presentation/controllers/: user_finder_controller.py  user_finder_controller_test.py  user_register_controller.py
src/presentation/http_types/: http_request.py  http_response.py
