[tool.poetry]
name = "clean-architecture-em-python"
version = "0.1.0"
description = ""
authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"
packages = [{include = "clean_architecture_em_python"}]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.17.5"
pre-commit = "^3.3.3"
sqlalchemy = "^2.0.19"
mysql-connector-python = "^8.1.0"
pytest = "^7.4.0"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
